force-app/main/default/objects/Document_Master__c/Document_Master__c.object-meta.xml
<CustomObject>
    <label>Document Master</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>