force-app/main/default/objects/Document_Master__c/fields/Caste_Category__c.field-meta.xml
<CustomField>
    <fullName>Caste_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caste Category</label>
    <type>Checkbox</type>
</CustomField>