force-app/main/default/objects/Document_Master__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lateral Entry</fullName>
            </value>
            <value>
                <fullName>Regular Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>