force-app/main/default/objects/Document_Master__c/fields/Foreign_Student__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreign Student</label>
    <type>Checkbox</type>
</CustomField>