force-app/main/default/objects/Document_Master__c/fields/Indian_Residence__c.field-meta.xml
<CustomField>
    <fullName>Indian_Residence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indian Residence</label>
    <type>Checkbox</type>
</CustomField>