force-app/main/default/objects/Document_Master__c/fields/Migration_Data__c.field-meta.xml
<CustomField>
    <fullName>Migration_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Data</label>
    <type>Checkbox</type>
</CustomField>