force-app/main/default/objects/Document_Master__c/fields/Non_Karnataka_Students__c.field-meta.xml
<CustomField>
    <fullName>Non_Karnataka_Students__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Karnataka Students</label>
    <type>Checkbox</type>
</CustomField>