force-app/main/default/objects/Document_Master__c/fields/SRN_Number__c.field-meta.xml
<CustomField>
    <fullName>SRN_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SRN Number</label>
    <type>Checkbox</type>
</CustomField>