force-app/main/default/objects/Document_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Caste_Category__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Indian_Residence__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>SRN_Number__c</columns>
    <columns>Quota__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>